force-app/main/default/objects/CoBuyer__c/CoBuyer__c.object-meta.xml
<CustomObject>
    <label>Co-Buyer</label>
    <nameField>
        <displayFormat>COB-{000000}</displayFormat>
        <label>Co-Buyer No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Co-Buyers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>