force-app/main/default/objects/CoBuyer__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <description>Relationship field with customer</description>
    <label>Co-Buyer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Co-Buyer</relationshipLabel>
    <relationshipName>Co_Borrowers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>