force-app/main/default/objects/CoBuyer__c/validationRules/CobuyerNotSamAsAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>CobuyerNotSamAsAccount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( Customer__c )),
Customer__c = Opportunity__r.AccountId
)</errorConditionFormula>
    <errorDisplayField>Customer__c</errorDisplayField>
    <errorMessage>Co-Buyer cannot be the same as Account Name. Please select a different value.</errorMessage>
</ValidationRule>