force-app/main/default/objects/CoBuyer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Priority__c</columns>
    <columns>Customer__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Relationship__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>